[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["physicstool"]

[project]
name = "physicstool"
version = "0.0.1"
authors = [ { name="Marc van der Sluys", email="git@vandersluys.nl" } ]
description = "A simple Python package to do basic physics calculations."
readme   = "README.md"
license  = "EUPL-1.2"
keywords = ["physics","technology","natural sciences"]
dependencies = ["numpy"]

# See: https://pypi.org/pypi?:action=list_classifiers
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Astronomy",
        "Topic :: Scientific/Engineering :: Physics",
    ]

[project.urls]
GitHub = "https://github.com/MarcvdSluys/physicstool"
ReadTheDocs = "https://physicstool.readthedocs.io"
